--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,14 @@
 <a>
-    <h1>My Store</h1>
+    <h1>Home</h1>
+    <h1>Home</h1>
+    <h1>Home</h1>
+    <h1>Home</h1>
+    <h1>Home</h1>
+
+    <h1>Home</h1>
+    <h1>Home</h1>
+    <h1>Home</h1>
+    <h1>Home</h1>
+    <h1>Home</h1>
+    <h1>Home</h1>
 </a>
