--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,10 +3,7 @@
     padding: 20px;
 }
 
-mat-sidenav-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.nav-link {
+    text-decoration: none;
+    color: black;
 }
