--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,9 @@
     text-decoration: none;
     color: black;
 }
+
+.side-menu-link {
+    font-size: 14px;
+    text-decoration: none;
+    color: black;
+}
