--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,3 @@
-.container {
-    margin: 20px;
-    padding: 20px;
-}
-
 .nav-link {
     text-decoration: none;
     color: black;
@@ -12,4 +7,12 @@
     font-size: 14px;
     text-decoration: none;
     color: black;
+}
+
+.content {
+    padding: 5% 5% 100%;
+}
+
+.side-items {
+    padding: 10px 50px 25px 20px;
 }
