--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,24 @@
-<a>
-    <h1>Home</h1>
-    <h1>Home</h1>
-    <h1>Home</h1>
-    <h1>Home</h1>
-    <h1>Home</h1>
-
-    <h1>Home</h1>
-    <h1>Home</h1>
-    <h1>Home</h1>
-    <h1>Home</h1>
-    <h1>Home</h1>
-    <h1>Home</h1>
-</a>
+<div class="login-form-flex">
+    <mat-card>
+        <mat-card-title>
+            Login
+        </mat-card-title>
+        <mat-card-content>
+            <p>
+                <mat-form-field>
+                    <input type="email" matInput placeholder="Correo">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field>
+                    <input type="password" matInput placeholder="Contraseña" />
+                </mat-form-field>
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <div class="button-flex">
+                <button mat-button>Login</button>
+            </div>
+        </mat-card-actions>
+    </mat-card>
+</div>
