--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="tool-bar-link">
 
   <button mat-icon-button (click)=sidenav.toggle()>
     <mat-icon>menu</mat-icon>
@@ -31,7 +31,7 @@
 
   </mat-sidenav>
 
-  <mat-sidenav-content class="content">
+  <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 
