--- a/src/app/customers/list/list.component.html
+++ b/src/app/customers/list/list.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="content">
   <div>
     <h1 class="table title">Lista de clientes</h1>
   </div>
@@ -42,7 +42,7 @@
       <td mat-cell *matCellDef="let element" class="table"> {{element.document}} </td>
     </ng-container>
 
-    <!-- Last Name Column -->
+    <!-- Actions Column -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef class="table title"> Acciones </th>
       <td mat-cell *matCellDef="let element" class="table">
