--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
         <mat-card>
             <mat-card-title>
                 <img src="assets/images/icon.png">
-            </mat-card-title>          
+            </mat-card-title>
             <mat-card-content>
                 <p>
                     <mat-form-field>
@@ -12,13 +12,16 @@
                 </p>
                 <p>
                     <mat-form-field>
-                        <input type="password" matInput placeholder="Contraseña" />
+                        <input type="password" matInput [type]="hide ? 'password' : 'text'" placeholder="Contraseña" />
+                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
                     </mat-form-field>
                 </p>
             </mat-card-content>
             <mat-card-actions>
                 <div class="button-flex">
-                    <button mat-button>Login</button>
+                    <button mat-button (click)="login()">Login</button>
                 </div>
             </mat-card-actions>
         </mat-card>
