--- a/src/app/orders/list/list.component.html
+++ b/src/app/orders/list/list.component.html
@@ -24,7 +24,7 @@
 <section class="content">
 
     <div>
-        <h2 class="table title">LISTA DE PEDIDOS</h2>
+        <h1 class="table title">LISTA DE PEDIDOS</h1>
     </div>
 
     <!-- Loading -->
@@ -35,6 +35,7 @@
     </div>
 
     <div [hidden]="isLoading">
+
         <!-- Tabs -->
         <mat-tab-group mat-align-tabs="end" animationDuration="0ms" class="example-stretched-tabs mat-elevation-z4"
             (selectedTabChange)="filterTableData($event)">
@@ -90,5 +91,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
         </table>
+        <mat-paginator class="mat-elevation-z8" [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons>
+        </mat-paginator>
     </div>
 </section>
