--- a/src/app/orders/calendar/calendar.component.html
+++ b/src/app/orders/calendar/calendar.component.html
@@ -1,1 +1,9 @@
-<p>calendar works!</p>
+<mat-button-toggle-group #group="matButtonToggleGroup">
+    <mat-button-toggle (click)="createContract()">
+        <mat-icon>receipt_long</mat-icon>
+        <a class="nav-link"><span>Realizar Contrato</span></a>
+    </mat-button-toggle>
+</mat-button-toggle-group>
+<section class="content">
+
+</section>
