--- a/src/app/orders/list/list.component.html
+++ b/src/app/orders/list/list.component.html
@@ -7,6 +7,10 @@
         <mat-icon>assignment</mat-icon>
         <a class="nav-link"><span>Solicitar Activos</span></a>
     </mat-button-toggle>
+    <mat-button-toggle (click)="createContract()">
+        <mat-icon>receipt_long</mat-icon>
+        <a class="nav-link"><span>Realizar Contrato</span></a>
+    </mat-button-toggle>
 </mat-button-toggle-group>
 <section class="content">
 
@@ -26,6 +30,7 @@
         <!-- Tabs -->
         <mat-tab-group mat-align-tabs="end" animationDuration="0ms" class="example-stretched-tabs mat-elevation-z4"
             (selectedTabChange)="filterTableData($event)">
+            <mat-tab label="Creados"></mat-tab>
             <mat-tab label="En ruta"></mat-tab>
             <mat-tab label="Pendiente de pago"></mat-tab>
             <mat-tab label="Completados"></mat-tab>
