add new changes

--- a/src/app/orders/list/list.component.html
+++ b/src/app/orders/list/list.component.html
@@ -31,6 +31,7 @@
         <mat-tab-group mat-align-tabs="end" animationDuration="0ms" class="example-stretched-tabs mat-elevation-z4"
             (selectedTabChange)="filterTableData($event)">
             <mat-tab label="Creados"></mat-tab>
+            <mat-tab label="Aprobado"></mat-tab>
             <mat-tab label="En ruta"></mat-tab>
             <mat-tab label="Pendiente de pago"></mat-tab>
             <mat-tab label="Completados"></mat-tab>
