--- a/src/app/orders/routes/routes.component.html
+++ b/src/app/orders/routes/routes.component.html
@@ -2,12 +2,16 @@
     <div>
         <h1 class="table title">MIS RUTAS</h1>
     </div>
+    
     <mat-form-field appearance="fill">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker">
+        <mat-label>Escoge una fecha</mat-label>
+        <input matInput [matDatepicker]="picker" (dateChange)="changeDate($event)">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
+    </mat-form-field>
+
+    <button style="float: right;" color="primary" mat-fab (click)="confirmRoute()"><mat-icon>fact_check</mat-icon></button>
+    
     <!-- Loading -->
     <div *ngIf="isLoading">
         <div>
@@ -31,7 +35,7 @@
                             <table #innerTables mat-table [dataSource]="element.route" matSort>
                                 <ng-container matColumnDef="{{innerColumn}}"
                                     *ngFor="let innerColumn of innerDisplayedColumns">
-                                    <th mat-header-cell *matHeaderCellDef> {{innerColumn}} </th>
+                                    <th mat-header-cell *matHeaderCellDef> {{getColumnDef(innerColumn)}} </th>
                                     <td mat-cell *matCellDef="let element"> {{element[innerColumn]}} </td>
                                 </ng-container>
                                 <tr mat-header-row *matHeaderRowDef="innerDisplayedColumns"></tr>
